--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "lint-staged": {
-        "*.{js,ts}": "eslint --cache --fix",
+        "*.{ts}": "eslint --cache --fix",
         "*": "prettier -w"
     },
     "devDependencies": {
@@ -59,5 +59,8 @@
     },
     "peerDependencies": {
         "vite": "^3.0.9"
+    },
+    "engines": {
+        "node": ">=14.18.0"
     }
 }
